fixed padding for creator on mobile

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -261,7 +261,6 @@ nav {
 .creator {
   flex-direction: row;
   justify-content: center;
-  padding-top: 110px;
 }
 
 .creator-card {
